--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,122 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>micamika</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+		<link rel="stylesheet" type="text/css" href="css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="css/sideBar.css"/>
 	</head>
 	<body>
+		<!--右边侧边栏-->
 		<div class="sideBar"></div>
+		<!--网页头部-->
 		<div class="header"></div>
-		
-		<h2 style="color: green;">hh</h2>	
+		<!--首页内容-->
+		<div class="content">
+			<!--轮播图-->
+			<div class="banner">
+				<ul class="banner_img">
+					<li><a href="#"><img src="img/index_img/c23750ce19901648514e7c19372e24b3.jpg"/></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<div class="leftArrow"></div>
+					<div class="rightArrow"></div>
+				</ul>
+				<ul class="list">
+					<li><a href="">1</a></li>
+					<li><a href="">2</a></li>
+					<li><a href="">3</a></li>
+					<li><a href="">4</a></li>
+				</ul>						
+			</div>
+			<!--轮播图下面的立即订购-->
+			<div class="purchase">
+				<div class="purchase_left">
+					注册送券<br />
+					立享9折
+				</div>
+				<div class="purchase_middle">
+					400-606-7757
+				</div>
+				<div class="purchase_right">					
+					<input type="button" name="" id="" value="立即订购" />					
+				</div>
+			</div>					
+			<!--精品推荐-->
+			<div class="recommond">
+				<div class="recommond_wrap">
+					<div class="side_img">
+						<a href="#">
+							<img src="img/index_img/cb362b0fa83cd72852fb6901c0164f90.jpg"/>
+						</a>						
+					</div>
+					<div class="cake_list">
+						<dl>
+							<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
+							<dd>
+								<h3>￥237.00</h3>
+								<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
+								<span>92439 人付款</span>
+								<p>
+									<a href="#">更多</a>
+								</p>								
+							</dd>
+						</dl>
+						<dl>
+							<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
+							<dd>
+								<h3>￥237.00</h3>
+								<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
+								<span>92439 人付款</span>
+								<p>
+									<a href="#">更多</a>
+								</p>								
+							</dd>
+						</dl>
+						<dl>
+							<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
+							<dd>
+								<h3>￥237.00</h3>
+								<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
+								<span>92439 人付款</span>
+								<p>
+									<a href="#">更多</a>
+								</p>								
+							</dd>
+						</dl>
+					</div>
+					<div class="leftArrow"></div>
+					<div class="rightArrow"></div>
+				</div>
+				<div class="recommond_more">
+					<a href="#">更多蛋糕精品</a>
+				</div>
+			</div>
+			<!--精品推荐下的广告-->
+			<div class="smallBanner">
+				<a href="#">
+					<img src="img/index_img/3096cbe91e4286bf43f2f06854bdbb39.jpg"/>
+				</a>
+			</div>
+			<!--特色-->
+			<div class="characteristic">
+				<div class="characteristic_wrap">
+					<div class="characteristic_wrap_top">
+						<img src="img/index_img/ff3d449249346627a477e056c943fdb7.jpg"/>
+					</div>
+					<a href="#"><img src="img/index_img/a2eba53abe5769c926ec75ce0823a076.jpg"/></a>
+					<a href="#"><img src="img/index_img/784e462f0d10b315e111d4e745924586.jpg"/></a>
+					<a href="#"><img src="img/index_img/f8dd374611773093ba446a17aef9c7bf.jpg"/></a>
+					<a href="#"><img src="img/index_img/7486eadcdcdff312c02db19142d627e5.jpg"/></a>
+					<div class="allCakes">
+						<a href="#">查看全部蛋糕</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--网页尾部-->
 		<div class="footer"></div>
 		<script src="lib/requirejs/require.js" data-main="js/index"></script>
 	</body>
