--- a/src/html/allCakes.html
+++ b/src/html/allCakes.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/sideBar.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/allCakes.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/iconfont.css"/>
 	</head>
 	<body>
 		<!--右边侧边栏-->
@@ -14,7 +15,51 @@
 		<!--网页头部-->
 		<div class="header"></div>
 		<!--主要内容-->
-		
+		<div class="content">
+			<div class="content_wrap">
+				<div class="empty"></div>
+				<div class="kind">
+					<ul>
+						<p>分类</p>
+						<li><a href="#">臻选蛋糕</a></li>
+						<li><a href="#">全国发专区</a></li>
+						<li><a href="#">巧克力蛋糕</a></li>
+						<li><a href="#">鲜花蛋糕</a></li>
+						<li><a href="#">裸蛋糕</a></li>
+						<li><a href="#">奶油水果蛋糕</a></li>
+						<li><a href="#">慕斯蛋糕</a></li>
+						<li><a href="#">拼接蛋糕</a></li>
+						<li><a href="#">乳酪蛋糕</a></li>
+						<li><a href="#">冰淇淋蛋糕</a></li>
+						<li><a href="#">卡通蛋糕</a></li>
+						<li><a href="#">蛋糕伴侣</a></li>
+						<li><a href="#">VIP购卡</a></li>
+					</ul>
+					<div class="kind_bottom">
+						<a href="#">默认</a>
+						<a href="#">价格<i class="iconfont icon-f11-copy"></i></a>
+						<a href="#">销量<i class="iconfont icon-f11-copy"></i></a>
+						<span>排序:</span>
+						<select name="">
+							<option value="">默认</option>
+							<option value="">按价格 从高到低</option>
+							<option value="">按价格 从低到高</option>
+							<option value="">访问周次数</option>
+							<option value="">总访问次数</option>
+							<option value="">周购买次数</option>
+							<option value="">总购买次数</option>
+						</select>
+						<div class="pages">
+							<span>1/4</span>
+							<i class="iconfont icon-zuofanye-xue"></i>
+							<i class="iconfont icon-youfanye-xue"></i>
+							<a href="#"><i class="iconfont icon-biaoge">大图</i></a>
+							<a href="#"><i class="iconfont icon-datu">列表</i></a>				
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!--网页尾部-->
 		<div class="footer"></div>
 		<script src="../lib/requirejs/require.js" data-main="../js/allCakes.js"></script>
