--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -2,8 +2,144 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>micamika</title>
+		<link rel="stylesheet" type="text/css" href="/css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/sideBar.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/detail.css"/>
 	</head>
 	<body>
+		<!--右边侧边栏-->
+		<div class="sideBar"></div>
+		<!--网页头部-->
+		<div class="header"></div>
+		<!--网页内容-->
+		<div class="content">
+			<div class="contentWrap">
+				<!--购买界面-->
+				<div class="cakeDetails">
+					 <div class="cakeImg">
+					 	<dl>
+					 		<dt><img src="/img/details_img/a2aa5905958ccb9337bc2a2a879eb901.jpg"/></dt>
+					 		<dd>
+					 			<div class="leftClick">&lt;</div>
+					 			<div class="smallImg">
+					 				<ul>
+						 				<li><img src="/img/details_img/a75ce765535a37045c190256bbb6d2b2.jpg"/></li>
+						 				<li><img src="/img/details_img/ff22def1f569b0710b45ed4d3d3b3ed4.jpg"/></li>
+						 				<li><img src="/img/details_img/42ee9bb480357439ddf2c3a7672316fe.jpg"/></li>
+						 				<li><img src="/img/details_img/34548c24b08f3810403192cd82d485db.jpg"/></li>
+						 				<li><img src="/img/details_img/907abc65083e3cc7480b50380da7141e.jpg"/></li>
+						 				<li><img src="/img/details_img/e8e02a66feb3310e97f56db8c4f0b3bc.jpg"/></li>
+						 				<li><img src="/img/details_img/d4372f5d2bcb8a68ec8b010d47783e97.jpg"/></li>
+						 				<li><img src="/img/details_img/b092cc3804c6fca147cae8f9e9516af3.jpg"/></li>
+						 			</ul>
+					 			</div>				 			
+					 			<div class="rightClick">&gt;</div>
+					 		</dd>
+					 	</dl>
+					 	<input type="button" name="" id="" value="推荐" />
+					 	<input type="button" name="" id="" value="收藏" />
+					 </div>
+					<div class="addCart">
+						<h2>摩天轮 Ferris Wheel</h2>
+						<i>好多人付款</i>
+						<h3>￥317.00</h3>
+						<div class="num">
+							<p>货品编号：</p><span>M717020</span>							
+						</div>
+						<div class="brand">
+							<p>品牌：</p><span>米卡米卡</span>
+						</div>
+						<div class="standard">
+							<p>规格：</p>
+							<div>
+								<input type="button" name="" id="" value="2磅" />
+								<input type="button" name="" id="" value="3磅" />
+								<input type="button" name="" id="" value="4磅" />
+							</div>
+						</div>
+						<div class="howMany">
+							<p>数量：</p>
+							<div class="cakeNumber">
+	              				<a href="javascript:void(0)" class="induce">-</a>
+	              				<input type="text" min="1" max="20" value="1">
+	              				<a href="javascript:void(0)" class="increase">+</a>
+							</div>
+						</div>
+						<a href="/html/cart.html" class="immediately">立刻购买</a>
+						<a href="#" class="addToCart">加入购物车</a>
+						<b>扫一扫购买</b>
+					</div>
+				</div>
+				<!--菜单-->
+				<ul class="cackMenu">
+					<li><a href="#">商品详情</a></li>					
+					<li><a href="#">订购须知</a></li>
+					<li><a href="#">优惠券使用说明</a></li>
+					<li><a href="#">礼金卡使用说明</a></li>
+					<li><a href="#">配送范围及时间</a></li>
+					<!--浏览热门商品-->
+					<div class="_3hours">
+						<h3>浏览热门商品</h3>
+						<dl>
+							<dt>
+								<a href="#"><img src="/img/allCakes_img/a5aa103cdf90ffc610015a3db91d0373.jpg"/></a>
+							</dt>
+							<dd>
+								<a href="#">百利甜之恋 Bailey Love</a>
+								<span>￥237.00</span>
+							</dd>
+						</dl>
+						<dl>
+							<dt>
+								<a href="#"><img src="/img/allCakes_img/a5aa103cdf90ffc610015a3db91d0373.jpg"/></a>
+							</dt>
+							<dd>
+								<a href="#">百利甜之恋 Bailey Love</a>
+								<span>￥237.00</span>
+							</dd>
+						</dl>
+						<dl>
+							<dt>
+								<a href="#"><img src="/img/allCakes_img/a5aa103cdf90ffc610015a3db91d0373.jpg"/></a>
+							</dt>
+							<dd>
+								<a href="#">百利甜之恋 Bailey Love</a>
+								<span>￥237.00</span>
+							</dd>
+						</dl>
+					</div>
+				</ul>
+				
+				<!--详情页面-->
+				<div class="aboutCake">
+					<div>
+						<p>品牌：米卡米卡</p>
+						<p>口味：红丝绒/蓝莓/巧克力</p>
+						<p>适合场景：生日、狗年新年</p>
+					</div>
+					<div>
+						<p>所属分类：卡通蛋糕</p>
+						<p>适合人群：很爱吃甜食的人</p>
+						<p>TIPS：不含酒</p>
+					</div>
+					<div>
+						<p>口感：香甜，顺滑</p>
+						<p>提前预定：3小时</p>
+						<p>商品编号：M770</p>
+					</div>
+				</div>
+				<img src="/img/details_img/0d98e0f585eca9e95e1708df39c0dc71.jpg"/>
+				<img src="/img/details_img/893af73d1299874d7609ae7fc5ed5909.jpg"/>
+				<img src="/img/details_img/292427bcc186dad1e63f3492f16421fe.jpg"/>
+				<img src="/img/details_img/c1509cf460fa00f01a4da9649d6e0127.jpg"/>
+				<img src="/img/details_img/6daffd68bc1ac1cc745a58762d3da283.jpg"/>
+				
+			</div>
+		</div>
+		<!--网页尾部-->
+		<div class="footer"></div>
+		<script src="/lib/requirejs/require.js" data-main="/js/detail.js"></script>
 	</body>
 </html>
