--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>micamika</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<!-- Bootstrap -->
+    	<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<link rel="stylesheet" type="text/css" href="css/header.css"/>
 		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="css/sideBar.css"/>
+		
 	</head>
 	<body>
 		<!--右边侧边栏-->
@@ -16,7 +21,7 @@
 		<!--首页内容-->
 		<div class="content">
 			<!--轮播图-->
-			<div class="banner">
+			<!--<div class="banner">
 				<ul class="banner_img">
 					<li><a href="#"><img src="img/index_img/c23750ce19901648514e7c19372e24b3.jpg"/></a></li>
 					<li><a href="#"></a></li>
@@ -31,7 +36,47 @@
 					<li><a href="">3</a></li>
 					<li><a href="">4</a></li>
 				</ul>						
+			</div>-->
+			
+			
+			
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			  <!-- Indicators -->
+			  <ol class="carousel-indicators">
+			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+			  </ol>
+			
+			  <!-- Wrapper for slides -->
+			  <div class="carousel-inner" role="listbox">
+			    <div class="item active">
+			      <img src="/img/index_img/c23750ce19901648514e7c19372e24b3.jpg" alt="...">
+			    </div>
+			    <div class="item">
+			      <img src="/img/index_img/d27d8d54d47d9a8c78d7e70f39a47cd1.jpg" alt="...">
+			    </div>
+			    <div class="item">
+			      <img src="/img/index_img/505f96872db355b06fd9c6a1811bb10d.jpg" alt="...">
+			    </div>
+			    <div class="item">
+			      <img src="/img/index_img/671840b9dfbc12a14e12eb8ccb67ec3e.jpg" alt="...">
+			    </div>
+			  </div>
+			
+			  <!-- Controls -->
+			  <a class="left carousel-control leftArrow" href="#carousel-example-generic" role="button" data-slide="prev">
+			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="right carousel-control rightArrow" href="#carousel-example-generic" role="button" data-slide="next">
+			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
 			</div>
+			
+		
 			<!--轮播图下面的立即订购-->
 			<div class="purchase">
 				<div class="purchase_left">
@@ -119,6 +164,96 @@
 		</div>
 		<!--网页尾部-->
 		<div class="footer"></div>
+		
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <!-- Nav tabs -->
+				  <ul class="nav nav-tabs" role="tablist">
+				    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">登录</a></li>
+				    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">注册</a></li>
+				  </ul>
+		      </div>
+		      <div class="modal-body">
+		        <div>
+				  <!-- Tab panes -->
+				  <div class="tab-content">
+				  	<!--登录框-->
+				    <div role="tabpanel" class="tab-pane active" id="home">
+				    	<form class="form-horizontal">
+						  <div class="form-group">
+						    <label for="inputName3" class="col-sm-2 control-label">用户名</label>
+						    <div class="col-sm-10">
+						      <input type="text" class="form-control" id="inputName3" placeholder="用户名/邮箱地址/手机号">
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+						    <div class="col-sm-10">
+						      <input type="password" class="form-control" id="inputPassword3" placeholder="请填写密码">
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <div class="col-sm-offset-2 col-sm-10">
+						      <div class="checkbox">
+						        <label>
+						          <input type="checkbox"> 记住密码
+						        </label>
+						        <label>
+						          <input type="checkbox"/>两周内自动登录
+						        </label>
+						        
+						      </div>
+						    </div>
+						  </div>
+						  <div class="form-group">
+						    <div class="col-sm-offset-2 col-sm-10">
+						      <button type="submit" class="btn btn-default" id="micamikaLogin">登录</button>
+						      <a href="#">忘记密码</a>
+						    </div>
+						  </div>
+						</form>
+				    </div>
+				    <!--注册框-->
+				    <div role="tabpanel" class="tab-pane" id="profile">
+				    	<form>
+						  <div class="form-group">
+						    <label for="exampleInputEmail1">注册账号：</label>
+						    <input type="text" class="form-control" id="exampleInputName1" placeholder="用户名/邮箱地址/手机号">
+						  </div>
+						  <div class="form-group">
+						    <label for="exampleInputPassword1">密码：</label>
+						    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="6-20个字符">
+						    <span style="color: red;display: none;" id="firstPass">密码不符合要求</span>
+						  </div>
+						  <div class="form-group">
+						    <label for="exampleInputPassword2">确认密码：</label>
+						    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="再次填写密码">
+						    <span style="color: red;display: none;" id="secondPass">两次密码输入不同</span>
+						  </div>
+						  <div class="checkbox">
+						    <label>
+						      <input type="checkbox" id="agree">我已阅读并同意 <a href="#">会员注册协议</a>和 <a href="#">隐私保护政策</a>
+						    </label>
+						  </div>
+						  <button type="submit" class="btn btn-default" id="micamikaRegister">注册</button>
+						  <span id="registerFail"></span>
+						</form>
+				    </div>
+				  </div>
+				</div>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
 		<script src="lib/requirejs/require.js" data-main="js/index"></script>
+		<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    	<script src="/lib/jquery/jquery-1.12.4.min.js"></script>
+		<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    	<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
