--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -74,7 +74,7 @@
 						<div class="standard">
 							<p>规格：</p>
 							<div>
-								<input type="button" name="" id="" value="2磅" />
+								<input type="button" name="" id="" value="2磅" class="inputChecked"/>
 								<input type="button" name="" id="" value="3磅" />
 								<input type="button" name="" id="" value="4磅" />
 							</div>
@@ -83,12 +83,12 @@
 							<p>数量：</p>
 							<div class="cakeNumber">
 	              				<a href="javascript:void(0)" class="induce">-</a>
-	              				<input type="text" min="1" max="20" value="1">
+	              				<input type="text" min="1" max="20" value="1" class="changeNum">
 	              				<a href="javascript:void(0)" class="increase">+</a>
 							</div>
 						</div>
 						<a href="/html/cart.html" class="immediately">立刻购买</a>
-						<a href="#" class="addToCart">加入购物车</a>
+						<input type="button" class="addToCart" value="加入购物车"/>
 						<b>扫一扫购买</b>
 					</div>
 				</div>
