--- a/src/index.html
+++ b/src/index.html
@@ -21,62 +21,9 @@
 		<!--首页内容-->
 		<div class="content">
 			<!--轮播图-->
-			<!--<div class="banner">
-				<ul class="banner_img">
-					<li><a href="#"><img src="img/index_img/c23750ce19901648514e7c19372e24b3.jpg"/></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<div class="leftArrow"></div>
-					<div class="rightArrow"></div>
-				</ul>
-				<ul class="list">
-					<li><a href="">1</a></li>
-					<li><a href="">2</a></li>
-					<li><a href="">3</a></li>
-					<li><a href="">4</a></li>
-				</ul>						
-			</div>-->
-			
-			
-			
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-			  <!-- Indicators -->
-			  <ol class="carousel-indicators">
-			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-			  </ol>
-			
-			  <!-- Wrapper for slides -->
-			  <div class="carousel-inner" role="listbox">
-			    <div class="item active">
-			      <img src="/img/index_img/c23750ce19901648514e7c19372e24b3.jpg" alt="...">
-			    </div>
-			    <div class="item">
-			      <img src="/img/index_img/d27d8d54d47d9a8c78d7e70f39a47cd1.jpg" alt="...">
-			    </div>
-			    <div class="item">
-			      <img src="/img/index_img/505f96872db355b06fd9c6a1811bb10d.jpg" alt="...">
-			    </div>
-			    <div class="item">
-			      <img src="/img/index_img/671840b9dfbc12a14e12eb8ccb67ec3e.jpg" alt="...">
-			    </div>
-			  </div>
-			
-			  <!-- Controls -->
-			  <a class="left carousel-control leftArrow" href="#carousel-example-generic" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control rightArrow" href="#carousel-example-generic" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
+			<div class="banner">
+				
 			</div>
-			
-		
 			<!--轮播图下面的立即订购-->
 			<div class="purchase">
 				<div class="purchase_left">
@@ -93,51 +40,97 @@
 			<!--精品推荐-->
 			<div class="recommond">
 				<div class="recommond_wrap">
-					<div class="side_img">
-						<a href="#">
-							<img src="img/index_img/cb362b0fa83cd72852fb6901c0164f90.jpg"/>
-						</a>						
-					</div>
-					<div class="cake_list">
-						<dl>
-							<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
-							<dd>
-								<h3>￥237.00</h3>
-								<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
-								<span>92439 人付款</span>
-								<p>
-									<a href="#">更多</a>
-								</p>								
-							</dd>
-						</dl>
-						<dl>
-							<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
-							<dd>
-								<h3>￥237.00</h3>
-								<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
-								<span>92439 人付款</span>
-								<p>
-									<a href="#">更多</a>
-								</p>								
-							</dd>
-						</dl>
-						<dl>
-							<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
-							<dd>
-								<h3>￥237.00</h3>
-								<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
-								<span>92439 人付款</span>
-								<p>
-									<a href="#">更多</a>
-								</p>								
-							</dd>
-						</dl>
+					<div class="recBox">
+						<div class="recommond1">
+							<div class="side_img">
+								<a href="#">
+									<img src="img/index_img/cb362b0fa83cd72852fb6901c0164f90.jpg"/>
+								</a>						
+							</div>
+							<div class="cake_list">
+								<dl>
+									<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
+									<dd>
+										<h3>￥237.00</h3>
+										<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
+										<span>92439 人付款</span>
+										<p>
+											<a href="#">更多</a>
+										</p>								
+									</dd>
+								</dl>
+								<dl>
+									<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
+									<dd>
+										<h3>￥237.00</h3>
+										<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
+										<span>92439 人付款</span>
+										<p>
+											<a href="#">更多</a>
+										</p>								
+									</dd>
+								</dl>
+								<dl>
+									<dt><a href="#"><img src="img/index_img/a0615097c150ed90bd99f5572f849a79.jpg"/></a></dt>
+									<dd>
+										<h3>￥237.00</h3>
+										<a href="#">请叫我奔放的小野马 Little Wild Horse</a>
+										<span>92439 人付款</span>
+										<p>
+											<a href="#">更多</a>
+										</p>								
+									</dd>
+								</dl>
+							</div>
+						</div>
+						<div class="recommond2">
+							<div class="side_img">
+								<a href="#">
+									<img src="img/index_img/95c2de44c4fb3e59d625746b30358e26.jpg"/>
+								</a>						
+							</div>
+							<div class="cake_list">
+								<dl>
+									<dt><a href="#"><img src="img/index_img/b2fa52b747916f1387f9ddf32158bd52.jpg"/></a></dt>
+									<dd>
+										<h3>￥237.00</h3>
+										<a href="#">小黄鸭嘎嘎 Yellow Duck</a>
+										<span>92439 人付款</span>
+										<p>
+											<a href="#">更多</a>
+										</p>								
+									</dd>
+								</dl>
+								<dl>
+									<dt><a href="#"><img src="img/index_img/b2fa52b747916f1387f9ddf32158bd52.jpg"/></a></dt>
+									<dd>
+										<h3>￥237.00</h3>
+										<a href="#">小黄鸭嘎嘎 Yellow Duck</a>
+										<span>92439 人付款</span>
+										<p>
+											<a href="#">更多</a>
+										</p>								
+									</dd>
+								</dl>
+								<dl>
+									<dt><a href="#"><img src="img/index_img/b2fa52b747916f1387f9ddf32158bd52.jpg"/></a></dt>
+									<dd>
+										<h3>￥237.00</h3>
+										<a href="#">小黄鸭嘎嘎 Yellow Duck</a>
+										<span>92439 人付款</span>
+										<p>
+											<a href="#">更多</a>
+										</p>								
+									</dd>
+								</dl>
+							</div>
+						</div>
 					</div>
 					<div class="leftArrow"></div>
 					<div class="rightArrow"></div>
 				</div>
 				<div class="recommond_more">
-					<a href="#">更多蛋糕精品</a>
+					<a href="/html/allCakes.html">更多蛋糕精品</a>
 				</div>
 			</div>
 			<!--精品推荐下的广告-->
