--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -74,14 +74,35 @@
 						<input type="button" name="" id="clearCart" value="清空购物车" />
 						<input type="button" name="" id="" value="凑单商品" />
 						<a href="/html/allCakes.html">继续购物</a>
-						<input type="button" name="" id="" value="下单结算" />
+						<input type="button" name="" id="pay" value="下单结算" />
 					</div>
 				</div>
-				
 			</div>
 		</div>
 		<!--网页尾部-->
 		<div class="footer"></div>
+		<!--遮罩层-->
+		<div class="occlusion"></div>
+		<div class="payBox">
+			<h3>请选择收货地址</h3>
+			<select name="province" id="province">
+				<option value="">请选择省份</option>
+			</select>
+			<select name="city" id="city">
+				<option value="">请选择城市</option>
+			</select>
+			<select name="count" id="count">
+				<option value="">请选择区县</option>
+			</select>
+			<h3>请填写详细地址</h3>
+			<input type="text" name="" value="" />
+			<h3>请填写收件人</h3>
+			<input type="text" name="" value="" />
+			<h3>请填写联系方式</h3>
+			<input type="text" name="" value="" />
+			<input type="submit" name="" value="确定" />
+			<input type="button" name="" id="cansel" value="取消" />
+		</div>
 		<script src="/lib/requirejs/require.js" data-main="/js/cart"></script>
 		<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     	<script src="/lib/jquery/jquery-1.12.4.min.js"></script>
